--- a/styles.css
+++ b/styles.css
@@ -447,32 +447,32 @@ footer.footer {
 
 #main-text-test {
   color: white;
-  font-size: 100px;
+  font-size: 10rem;
   font-weight: 900;
   z-index: 99;
   position: absolute;
-  top: 100px;
-  left: 100px;
+  top: 10rem;
+  left: 10rem;
 }
 
 #sub-text-test1 {
   color: white;
-  font-size: 100px;
+  font-size: 10rem;
   font-weight: 900;
   z-index: 99;
   position: absolute;
-  top: 210px;
-  left: 100px;
+  top: 21rem;
+  left: 10rem;
 } 
 
 #sub-text-test2 {
   color: white;
-  font-size: 100px;
+  font-size: 10rem;
   font-weight: 900;
   z-index: 99;
   position: absolute;
-  top: 320px;
-  left: 100px;
+  top: 32rem;
+  left: 10rem;
 } 
 
 .col-lg-4 h3 {
