--- a/styles.css
+++ b/styles.css
@@ -451,7 +451,7 @@ footer.footer {
 #main-text-test {
   color: white;
   font-size: 300%;
-  font-weight: 900;
+  font-weight: 600%;
   z-index: 99;
   position: absolute;
   top: 10%;
@@ -461,7 +461,7 @@ footer.footer {
 #sub-text-test1 {
   color: white;
   font-size: 300%;
-  font-weight: 900;
+  font-weight: 600%;
   z-index: 99;
   position: absolute;
   top: 31%;
@@ -471,7 +471,7 @@ footer.footer {
 #sub-text-test2 {
   color: white;
   font-size: 300%;
-  font-weight: 900;
+  font-weight: 600%;
   z-index: 99;
   position: absolute;
   top: 52%;
